syntax = "proto3";

package pb;
option go_package = "desafio-cleanarchitecture/internal/infra/grpc/pb";

message Order {
    string id = 1;
    float price = 2;
    float tax = 3;
    float final_price = 4;
    // Considerar usar google.protobuf.Timestamp para datas
}

message CreateOrderRequest {
    float price = 1;
    float tax = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message ListOrdersRequest {
    // Pode adicionar paginação/filtros aqui no futuro
}

message ListOrdersResponse {
    repeated Order orders = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {}
}
